[package]
name = "visualnv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26.x", optional = true }
crossterm = { version = "0.27.0", optional = true }

[features]
default = ["ratatui"]
ratatui = ["dep:ratatui", "dep:crossterm"]
